<resources>
    <string name="app_name">Driver Assist</string>
    <string name="login_title">Log In</string>
    <string name="login_button">Log in</string>
    <string name="first_time_here">First time here?</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_text">Sign up.</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Re-enter Password</string>
    <string name="create_account_button">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="email_hint">Email</string>
    <string name="save_park_location">Save Parking Location</string>
    <string name="speed_limit">SPEED LIMIT</string>
    <string name="speed_limit_start_value">25</string>
    <string name="current_speed_start_value">0</string>
    <string name="current_speed">CURRENT SPEED</string>
    <string name="silence_button">Silence Button</string>
    <string name="speak_button">Speak Button</string>
    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <!---->
    <!--strings used for navigation_menu.xml-->
    <string name="nav_last_parked">Last Parking Location</string>
    <string name="nav_parking_history">Parking History</string>
    <string name="nav_logout">Logout</string>
    <!--strings used for activity_parking_items.xml-->
    <string name="close_button">Close</string>
    <string name="image_view">Delete button</string>
    <string name="delete_button_desc">This will delete corresponding location</string>
    <string name="share_button">Share Button</string>
    <!---->

</resources>